added service photo

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
 				<h2 class="title-one">Why With Us?</h2>
-				<p>La Crosse is a city in Wisconsin. La Crosse has the most bars on one street in the whole nation (thats crazy considering we only have 55,000 people), two huge breweries that supply alot of alcohol to the midwest and the rest of the country, and the worlds largest six pack. Alcohol prices are really low, and our bars always have cheap drinks and really good specials. The Octoberfest in La Crosse is the second biggest in the world, second only to Berlin, Germany. That being said, we know our drinking which is why i'd cap that&copy; provides the perfect blend of La Crosse's rich culture with an crafty twist.</p>
+				<p>La Crosse is a city in Wisconsin. La Crosse has the most bars on one street in the whole nation (thats crazy considering we only have 55,000 people), two huge breweries that supply alot of alcohol to the midwest and the rest of the country, and the worlds largest six pack. Alcohol prices are really low, and our bars always have cheap drinks and really good specials. The Octoberfest in La Crosse is the second biggest in the world, second only to Berlin, Germany. That being said, we know our drinking which is why i'd cap that&copy; provides the perfect blend of La Crosse's rich culture with a crafty twist.</p>
 			</div>
 		</div>
 		<div class="about-us">
 			<div class="row">
 				<div class="col-sm-6">
-					<h3>Why with us?</h3>
+					<h3>More about us</h3>
 					<ul class="nav nav-tabs">
 						<li class="active"><a href="#about" data-toggle="tab"><i class="fa fa-chain-broken"></i> About</a></li>
 						<li><a href="#mission" data-toggle="tab"><i class="fa fa-th-large"></i> Mission</a></li>
@@ -123,15 +123,15 @@
 					<div class="tab-content">
 						<div class="tab-pane fade in active" id="about">
 							<div class="media">
-								<img class="pull-left media-object" src="images/about-us/about.jpg" alt="about us"> 
+								<img class="pull-left media-object" src="images/about-us/six.jpg" alt="about us"> 
 								<div class="media-body">
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+									<p>i'd cap that&copy; is a way for us to help pay our way through college while still doing something that we're passionate about.</p>
 								</div>
 							</div>
 						</div>
 						<div class="tab-pane fade" id="mission">
 							<div class="media">
-								<img class="pull-left media-object" src="images/about-us/mission.jpg" alt="Mission"> 
+								<img class="pull-left media-object" src="images/about-us/cap2.png" alt="Mission"> 
 								<div class="media-body">
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci </p>
 								</div>
@@ -139,7 +139,7 @@
 						</div>
 						<div class="tab-pane fade" id="community">
 							<div class="media">
-								<img class="pull-left media-object" src="images/about-us/community.jpg" alt="Community"> 
+								<img class="pull-left media-object" src="images/about-us/cap3.png" alt="Community"> 
 								<div class="media-body">
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
 								</div>
