added products to portfolio

--- a/index.html
+++ b/index.html
@@ -377,28 +377,16 @@
 				</div>
 				<ul class="portfolio-filter text-center">
 					<li><a class="btn btn-default active" href="#" data-filter="*">All</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".html">Html</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".wordpress">Wordpress</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".joomla">Joomla</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".megento">Megento</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".bptable">Tables</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".endtable">End Tables</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".coaster">Coasters</a></li>
+					<li><a class="btn btn-default" href="#" data-filter=".misc">MISC</a></li>
 				</ul><!--/#portfolio-filter-->
 				<div class="portfolio-items">
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/1.jpg" alt=""></div> 
-							<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item jooma">
+					<div class="col-sm-3 col-xs-12 portfolio-item bptable">
 						<div class="view efffect" >
 							<div class="portfolio-image">
-								<img src="images/portfolio/2.jpg" alt="">
+								<img src="images/portfolio/table.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
 								<h3>Novel</h3>
@@ -408,10 +396,23 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
+					<div class="col-sm-3 col-xs-12 portfolio-item coaster">
+						<div class="view efffect" >
+							<div class="portfolio-image">
+								<img src="images/portfolio/coaster1.jpg" alt="">
+							</div> 
+							<div class="mask text-center">
+								<h3>Novel</h3>
+								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<a href="#"><i class="fa fa-link"></i></a>
+								<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-xs-12 portfolio-item endtable">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/3.jpg" alt="">
+								<img src="images/portfolio/endtable1.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
 								<h3>Novel</h3>
@@ -421,7 +422,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item megento">
+					<div class="col-sm-3 col-xs-12 portfolio-item misc">
 						<div class="view efffect">
 							<div class="portfolio-image">
 								<img src="images/portfolio/4.jpg" alt="">
@@ -434,10 +435,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+					<div class="col-sm-3 col-xs-12 portfolio-item coaster">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/5.jpg" alt="">
+								<img src="images/portfolio/coaster2.jpg" alt="">
 							</div> <div class="mask text-center">
 							<h3>Novel</h3>
 							<h4>Lorem ipsum dolor sit amet consectetur</h4>
@@ -446,10 +447,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
+					<div class="col-sm-3 col-xs-12 portfolio-item endtable">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/6.jpg" alt="">
+								<img src="images/portfolio/endtable2.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
 								<h3>Novel</h3>
@@ -459,10 +460,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+					<div class="col-sm-3 col-xs-12 portfolio-item endtable">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/7.jpg" alt="">
+								<img src="images/portfolio/endtable3.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
 								<h3>Novel</h3>
@@ -472,10 +473,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item joomla">
+					<div class="col-sm-3 col-xs-12 portfolio-item coaster">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/8.jpg" alt=""></div> 
+								<img src="images/portfolio/coaster3.jpg" alt=""></div> 
 							<div class="mask text-center">
 								<h3>Novel</h3>
 								<h4>Lorem ipsum dolor sit amet consectetur</h4>
@@ -484,10 +485,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item html">
+					<div class="col-sm-3 col-xs-12 portfolio-item endtable">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/9.jpg" alt="">
+								<img src="images/portfolio/endtable4.jpg" alt="">
 							</div> 
 							<div class="mask text-center">
 								<h3>Novel</h3>
@@ -497,10 +498,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
+					<div class="col-sm-3 col-xs-12 portfolio-item coaster">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/10.jpg" alt=""></div> 
+								<img src="images/portfolio/coaster4.jpg" alt=""></div> 
 							<div class="mask text-center">
 								<h3>Novel</h3>
 								<h4>Lorem ipsum dolor sit amet consectetur</h4>
@@ -509,10 +510,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item joomla">
+					<div class="col-sm-3 col-xs-12 portfolio-item coaster">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/11.jpg" alt=""></div> 
+								<img src="images/portfolio/coaster5.jpg" alt=""></div> 
 							<div class="mask text-center">
 								<h3>Novel</h3>
 								<h4>Lorem ipsum dolor sit amet consectetur</h4>
