--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
 						</div>
 						<div class="mask text-center">
 							<h3>Beer Pong table</h3>
-							<h4>A nice table</h4>
-							<a href="#contact"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<h4>Sold</h4>
+							<div><a href="images/portfolio/table.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>							
 						</div>
 					</div>
 				</div>
@@ -352,9 +352,9 @@
 						</div>
 						<div class="mask text-center">
 							<h3>Lakefront Brewery</h3>
-							<h4>Based in Milwaukee, WI</h4>
-							<a href="#contact"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/coaster1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
 						</div>
 					</div>
 				</div>
@@ -365,9 +365,9 @@
 						</div>
 						<div class="mask text-center">
 							<h3>Triangular Endtable</h3>
-							<h4>Endtable</h4>
-							<a href="#contact"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/endtable1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<h4>Sold</h4>
+							<div><a href="images/portfolio/endtable1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
 						</div>
 					</div>
 				</div>
@@ -387,17 +387,17 @@
 				<div class="col-sm-3 col-xs-12 portfolio-item coaster">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/coaster2.jpg" alt="">
+							<img src="images/portfolio/coaster2.jpeg" alt="">
 						</div>
 						<div class="mask text-center">
 							<h3>Miller High Life</h3>
-							<h4>Based in Milwaukee, WI</h4>
-							<a href="#contact"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/coaster2.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster2-1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 col-xs-12 portfolio-item endtable">
+				<!--<div class="col-sm-3 col-xs-12 portfolio-item endtable">
 					<div class="view efffect">
 						<div class="portfolio-image">
 							<img src="images/portfolio/endtable2.jpg" alt="">
@@ -409,7 +409,7 @@
 							<a href="images/portfolio/endtable2.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
 					</div>
-				</div>
+				</div>-->
 				<div class="col-sm-3 col-xs-12 portfolio-item endtable">
 					<div class="view efffect">
 						<div class="portfolio-image">
@@ -417,9 +417,9 @@
 						</div>
 						<div class="mask text-center">
 							<h3>America</h3>
-							<h4>God Bless the USA</h4>
-							<a href="#contact"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/endtable3-1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<h4>Sold</h4>
+							<div><a href="images/portfolio/endtable3-1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
 						</div>
 					</div>
 				</div>
@@ -442,33 +442,93 @@
 						</div>
 						<div class="mask text-center">
 							<h3>Hex</h3>
-							<h4>Geometrically pleasing endtable</h4>
-							<a href="#contact"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/endtable4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<h4>Sold</h4>
+							<div><a href="images/portfolio/endtable4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-12 portfolio-item coaster">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/coaster4.jpg" alt=""></div>
+							<img src="images/portfolio/coaster4.jpeg" alt=""></div>
 						<div class="mask text-center">
 							<h3>Coors Light</h3>
-							<h4>A light coaster</h4>
-							<a href="#contact"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/coaster4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster4.jpeg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-12 portfolio-item coaster">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/coaster5.jpg" alt=""></div>
+							<img src="images/portfolio/coaster5.jpeg" alt=""></div>
 						<div class="mask text-center">
-							<h3>Michalobe Golden Light</h3>
-							<h4>A McPick for your table</h4>
-							<a href="#contact"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/coaster5.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<h3>Heineken</h3>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster5-1.jpeg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item coaster">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<img src="images/portfolio/coaster6.jpeg" alt=""></div>
+						<div class="mask text-center">
+							<h3>Busch Light</h3>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster7-1.jpeg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item coaster">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<img src="images/portfolio/coaster7.jpeg" alt=""></div>
+						<div class="mask text-center">
+							<h3>Busch Light</h3>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster7-1.jpeg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item coaster">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<img src="images/portfolio/coaster8.jpeg" alt=""></div>
+						<div class="mask text-center">
+							<h3>Arcade Brewery</h3>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster8-1.jpeg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item coaster">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<img src="images/portfolio/coaster9.jpeg" alt=""></div>
+						<div class="mask text-center">
+							<h3>Budweiser</h3>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster9-1.jpeg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item coaster">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<img src="images/portfolio/coaster10.jpeg" alt=""></div>
+						<div class="mask text-center">
+							<h3>Corona</h3>
+							<h4>$5</h4>
+							<div><a href="images/portfolio/coaster10-1.jpeg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a></div>
+							<div style="padding-top: 5%"><a href="#contact"><button style type="button" class="btn btn-success">Buy Now</button></a></div>
 						</div>
 					</div>
 				</div>
