--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 				<div class="text-center">
 					<div class="col-sm-8 col-sm-offset-2">
 						<h2 class="title-one">Why Us?</h2>
-						<p>icapthat&copy; works right here in La Crosse, Wisconsin to bring together a community that reflects the iconic bar culture of Wisconsin. As a business, we garner from that same notion by creating works of art that are crafted from beer bottle caps and are inspired by the drinking culture La Crosse provides. A city comprised of just 55,000, La Crosse is known for its dominance in relation to bars per capita with a staggering three hundred sixty of them; and we lay claim to the nation’s highest quantity of bars on ONE street. Add celebrations and festivals into the mix and you’ll find that La Crosse holds the second largest celebration of Oktoberfest in the world, second only to that of Germany’s capitol city, Berlin. icapthat&copy; was created right in the heart of drinking culture USA, born in the shadow of the world’s largest six pack. We look to build off of what the community and people of La Crosse have already created, and allow you to partake in it as well. We bring artistic representation to the beer drinking community by showcasing caps from many of the local breweries and our handiworks are just as smooth and refined as the beer they come from. We present a crafty twist to the culture of La Crosse by offering unique coasters and tables made from the beer bottle caps so enjoyed by the community. Just as a beer commemorates the moments in life that bring people together our products act as a means to solidify the memories and traditions that are created from them.</p>
+						<p>At icapthat&copy; we look to build off of what the community and people of La Crosse have already created—an expectation for high quality and esthetic beauty, and allow you to partake in it as well. We bring artistic representation to the community by showcasing caps from many of the local breweries and our handiworks are just as smooth and refined as the beer they come from. We present a crafty twist to the culture of La Crosse by offering unique coasters and tables made from the beer bottle caps so enjoyed by the community. Just as a beverage commemorates the moments in life that bring people together our products act as a means to solidify the memories and traditions that are created from them.</p>
+						<!--<p>icapthat&copy; works right here in La Crosse, Wisconsin to bring together a community that reflects the iconic bar culture of Wisconsin. As a business, we garner from that same notion by creating works of art that are crafted from beer bottle caps and are inspired by the drinking culture La Crosse provides. A city comprised of just 55,000, La Crosse is known for its dominance in relation to bars per capita with a staggering three hundred sixty of them; and we lay claim to the nation’s highest quantity of bars on ONE street. Add celebrations and festivals into the mix and you’ll find that La Crosse holds the second largest celebration of Oktoberfest in the world, second only to that of Germany’s capitol city, Berlin. icapthat&copy; was created right in the heart of drinking culture USA, born in the shadow of the world’s largest six pack. We look to build off of what the community and people of La Crosse have already created, and allow you to partake in it as well. We bring artistic representation to the beer drinking community by showcasing caps from many of the local breweries and our handiworks are just as smooth and refined as the beer they come from. We present a crafty twist to the culture of La Crosse by offering unique coasters and tables made from the beer bottle caps so enjoyed by the community. Just as a beer commemorates the moments in life that bring people together our products act as a means to solidify the memories and traditions that are created from them.</p>->
 					</div>
 				</div>
 				<div class="about-us">
@@ -478,7 +479,7 @@
 									<a href="images/portfolio/coasters/heineken-large0.jpeg" rel="prettyPhoto[heineken]"><i class="fa fa-search-plus"></i></a>
 
 									<div style="display: none;">
-										<a rel="prettyPhoto[heineken]" title="Lakefront Brewery" href="images/portfolio/coasters/heineken-large1.jpeg">
+										<a rel="prettyPhoto[heineken]" title="Heineken" href="images/portfolio/coasters/heineken-large1.jpeg">
 											<!--<img alt="Heineken"/>-->
 										</a>   
 									</div>
@@ -512,7 +513,7 @@
 									<a href="images/portfolio/coasters/busch-large0.jpeg" rel="prettyPhoto[busch]"><i class="fa fa-search-plus"></i></a>
 
 									<div style="display: none;">
-										<a rel="prettyPhoto[busch]" title="Lakefront Brewery" href="images/portfolio/coasters/busch-large1.jpeg">
+										<a rel="prettyPhoto[busch]" title="Busch" href="images/portfolio/coasters/busch-large1.jpeg">
 											<!--<img alt="Caption"/>-->
 										</a>   
 									</div>
@@ -532,7 +533,7 @@
 									<a href="images/portfolio/coasters/arcade-large0.jpeg" rel="prettyPhoto[arcade]"><i class="fa fa-search-plus"></i></a>
 
 									<div style="display: none;">
-										<a rel="prettyPhoto[arcade]" title="Lakefront Brewery" href="images/portfolio/coasters/arcade-large1.jpeg">
+										<a rel="prettyPhoto[arcade]" title="Arcade" href="images/portfolio/coasters/arcade-large1.jpeg">
 											<!--<img alt="Caption"/>-->
 										</a>   
 									</div>
@@ -552,7 +553,7 @@
 									<a href="images/portfolio/coasters/bud-large0.jpeg" rel="prettyPhoto[bud]"><i class="fa fa-search-plus"></i></a>
 
 									<div style="display: none;">
-										<a rel="prettyPhoto[bud]" title="Lakefront Brewery" href="images/portfolio/coasters/bud-large1.jpeg">
+										<a rel="prettyPhoto[bud]" title="Bud Light" href="images/portfolio/coasters/bud-large1.jpeg">
 											<!--<img alt="Caption"/>-->
 										</a>   
 									</div>
@@ -572,7 +573,7 @@
 									<a href="images/portfolio/coasters/corona-large0.jpeg" rel="prettyPhoto[corona]"><i class="fa fa-search-plus"></i></a>
 
 									<div style="display: none;">
-										<a rel="prettyPhoto[corona]" title="Lakefront Brewery" href="images/portfolio/coasters/corona-large1.jpeg">
+										<a rel="prettyPhoto[corona]" title="Corona" href="images/portfolio/coasters/corona-large1.jpeg">
 											<!--<img alt="Caption"/>-->
 										</a>   
 									</div>
